--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,14 +1,34 @@
 .collection-item {
-	width: 22%;
+	position: relative;
+	width: 22vw;
 	height: 35rem;
 	display: flex;
 	flex-direction: column;
-
+	gap: 1rem;
 	.image {
 		height: 95%;
 		background-position: center;
 		background-size: cover;
-        border-radius: 5px;
+		border-radius: 5px;
+	}
+
+	.custom-button {
+		width: 80%;
+		align-self: center;
+		position: absolute;
+		bottom: 4rem;
+		opacity: 0.8;
+		display: none;
+	}
+
+	&:hover {
+		.image {
+			opacity: 0.8;
+		}
+
+		.custom-button {
+			display: block;
+		}
 	}
 }
 
@@ -16,14 +36,13 @@
 	height: 5%;
 	display: flex;
 	justify-content: space-between;
-    font-size: 1.8rem;
+	font-size: 1.8rem;
 
-    .name{
-        width: 90%;
-        
-    }
+	.name {
+		width: 90%;
+	}
 
-    .price{
-        width: 10%;
-    }
+	.price {
+		width: 10%;
+	}
 }
