--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -1,13 +1,18 @@
 .collection {
 	display: flex;
 	flex-direction: row;
-    gap: 3rem;
+	gap: 3rem;
 
 	&-preview {
-        margin-bottom: 3rem;
+		margin-bottom: 3rem;
 		.title {
 			font-size: 3rem;
-            margin-bottom: 3rem;
+			margin-bottom: 3rem;
+		}
+		.collection {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
 		}
 	}
 }
