--- a/src/components/custom-button/custom-button.styles.css
+++ b/src/components/custom-button/custom-button.styles.css
@@ -7,6 +7,8 @@
   letter-spacing: 0.5px;
   padding: 1.5rem 3rem;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
   transition: 0.3s all ease-in;
 }
 .custom-button:hover {
@@ -16,4 +18,14 @@
 .custom-button:focus {
   outline: 0;
   transform: scale(0.95);
+}
+
+.inverted {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+.inverted:hover {
+  background-color: black;
+  color: white;
 }/*# sourceMappingURL=custom-button.styles.css.map */
