--- a/src/components/collection-preview/collection-preview.styles.css
+++ b/src/components/collection-preview/collection-preview.styles.css
@@ -5,6 +5,14 @@
 }
 .collection-preview {
   margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+.collection-preview button {
+  width: 30%;
+  align-self: center;
+  margin-top: 3rem;
+  font-size: 1.6rem;
 }
 .collection-preview .title {
   font-size: 3rem;
