--- a/client/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/client/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -12,6 +12,10 @@
 	flex-direction: column;
 	border: 1px solid black;
 
+	@media screen and (max-width: 800px) {
+		right: 1rem;
+	}
+
 	.empty-message {
 		font-weight: lighter;
 		display: block;
