--- a/client/src/pages/sign-in-up/sign-up.styles.css
+++ b/client/src/pages/sign-in-up/sign-up.styles.css
@@ -16,4 +16,9 @@
 .sign-up span a:visited {
   color: grey;
   text-decoration: underline;
+}
+@media screen and (max-width: 800px) {
+  .sign-up {
+    width: 90vw;
+  }
 }/*# sourceMappingURL=sign-up.styles.css.map */
