--- a/client/src/components/checkout-item/checkout-item.styles.css
+++ b/client/src/components/checkout-item/checkout-item.styles.css
@@ -13,6 +13,8 @@
 }
 .checkout-item .image-container img {
   height: 100%;
+  background-position: center;
+  background-size: cover;
 }
 .checkout-item .name,
 .checkout-item .quantity,
@@ -37,4 +39,18 @@
 }
 .checkout-item .remove svg:hover {
   transform: scale(1.05);
+}
+@media screen and (max-width: 800px) {
+  .checkout-item {
+    padding: 0;
+  }
+  .checkout-item .image-container {
+    height: 10rem;
+  }
+  .checkout-item .name,
+.checkout-item .quantity,
+.checkout-item .remove,
+.checkout-item .price {
+    font-size: 1.5rem;
+  }
 }/*# sourceMappingURL=checkout-item.styles.css.map */
