--- a/client/src/components/custom-button/custom-button.styles.css
+++ b/client/src/components/custom-button/custom-button.styles.css
@@ -19,6 +19,11 @@
   outline: 0;
   transform: scale(0.95);
 }
+@media screen and (max-width: 800px) {
+  .custom-button {
+    width: 100%;
+  }
+}
 
 .inverted {
   background-color: white;
