--- a/client/src/components/sign--in--up/sign--in.styles.css
+++ b/client/src/components/sign--in--up/sign--in.styles.css
@@ -1,6 +1,13 @@
 .buttons {
   display: flex;
-  justify-content: space-between;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 800px) {
+  .buttons {
+    flex-direction: column;
+  }
 }
 
 .custom-button.signWithGoogle {
