--- a/client/src/pages/collection/collection.styles.scss
+++ b/client/src/pages/collection/collection.styles.scss
@@ -1,6 +1,7 @@
 .collection {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 
 	h1 {
 		font-size: 2rem;
@@ -11,5 +12,9 @@
 		grid-template-columns: repeat(4, 1fr);
 		row-gap: 3rem;
 		column-gap: 1.5rem;
+
+		@media screen and (max-width: 800px) {
+			grid-template-columns: 1fr 1fr;
+		}
 	}
 }
